# copycat-trader

./: .env.example  .gitignore  Cargo.toml  README.md  config.toml
src/: config.rs  db.rs  engine.rs  executor.rs  geyser.rs  lib.rs  main.rs  risk.rs  tui.rs  types.rs
src/decoder/: jupiter.rs  meteora.rs  mod.rs  orca.rs  pumpfun.rs  raydium.rs
tests/: decoder_replay.rs
tests/fixtures/: jupiter_buy.json  pumpfun_buy.json  raydium_amm_sell.json  unrelated_transfer.json
