[package]
name = "copycat-trader"
version = "0.1.0"
edition = "2021"
description = "Solana copy-trading daemon mirroring target wallets via Geyser + Jupiter"
license = "MIT"

[[bin]]
name = "copycat"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# Solana
solana-sdk = "1.18"
solana-client = "1.18"
solana-transaction-status = "1.18"
solana-program = "1.18"
spl-token = { version = "4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "3", features = ["no-entrypoint"] }

# Geyser gRPC (Yellowstone)
yellowstone-grpc-client = "2.0"
yellowstone-grpc-proto = "2.0"

# HTTP (Jupiter, Jito, rug-check providers)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
url = "2"

# Data / encoding
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
bincode = "1.3"
bs58 = "0.5"
base64 = "0.22"
hex = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }
borsh = "1"

# DB
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "macros", "migrate"] }

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Logging / error
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
thiserror = "2"

# Utility
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
parking_lot = "0.12"
rust_decimal = { version = "1", features = ["serde"] }
arc-swap = "1"

[dev-dependencies]
tokio = { version = "1.40", features = ["full", "test-util"] }
tempfile = "3"
pretty_assertions = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 1
